# charles.thyck.top

./: .gitignore  .gitmodules  404.html  CNAME  LICENSE  Makefile  README.md  add_resume.sh  bsconfig.json  build-url.sh  config.toml  deno.jsonc  deploy  deploy.sh  docusaurus.config.js  go.mod  go.sum  index.html  index.xml  make.sh  mise.toml  mprocs.yaml  package.json  pnpm-lock.yaml  pou.7d27e5392af3012836c24719baa8f3fa768d893dde0982d28e776de559c493567d0b574bff7cb09e76c2d92834836a59b7f5862f434ea3d776e537800bf0b73c.js  robots.txt  serve.go  shell.nix  sitemap.xml  tsconfig.json  turnip.make
assets/: index.18f28088.js  index.494124ba.js  index.57aa621a.js  index.cb1f0e09.js  pou.js  predictor_bg.wasm  turnip.html
blog/: 2022-05-28-welcome.md  2022-06-19-bye-bye-netlify.md  authors.yml  index.html
categories/: index.html  index.xml
config/: index.js  package.ts  url.js
content/: _index.md  projects.md  turnip.md
data/: .gitignore  TODO.md
docs/: hi.md  index.html
layouts/: 404.html  robots.txt
post/: index.html  index.xml
posts/: index.html
projects/: index.html  index.xml
series/: index.html  index.xml
src/: svg.ts
static/: manifest.json
styles/: pou.min.a20e01ce011a16273b84d862a9fec9b4c61d29fc51bb91b4a08702f93391c120562c0a55d0ea16309a170feb9532715ffeed7e224164daf5e7c6015a80f54107.css  (+2 more)
tags/: index.html  index.xml
theme/: index.js  navbar.js
turnip/: .gitignore  (+8 more)
turnip/predictor/: Cargo.toml  Makefile  README.md  lint.sh
turnip/predictor/src/: lib.rs  pattern.rs  pdf.rs  possibilities.rs  price.rs
turnip/predictor/tests/: web.rs
(+296 files in other folders)
