[package]
name = "predictor"
description = "Turnip Price Predictor"
license = "MIT"
repository = "https://github.com/cbebe/charles.thyck.top/turnip/predictor"
readme = "README.md"
version = "0.1.0"
categories = ["wasm", "no-std"]
keywords = ["animal-crossing"]
authors = ["Charles Ancheta <55412395+cbebe@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.60"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true    # Automatically strip symbols from the binary.
